Fixes to TL and RS

--- a/src/table/settings/settings.ini
+++ b/src/table/settings/settings.ini
@@ -68,7 +68,8 @@ static void SharingRailChanged(int32 new_value);
 static bool CheckSharingRoad(int32 &new_value);
 static bool CheckSharingWater(int32 &new_value);
 static bool CheckSharingAir(int32 &new_value);
-static bool TLSettingChanged(int32 p1);
+static void TLSettingChanged(int32 new_value);
+static void RSSettingChanged(int32 new_value);
 
 /* End - Callback Functions for the various settings */
 
@@ -2114,7 +2115,7 @@ from     = SL_MIN_VERSION
 def      = true
 str      = STR_CONFIG_SETTING_TRAFFIC_LIGHTS
 strhelp  = STR_CONFIG_SETTING_TRAFFIC_LIGHTS_HELPTEXT
-proc     = TLSettingChanged
+post_cb     = TLSettingChanged
 cat      = SC_EXPERT
 patxname = ""construction.traffic_lights""
 
@@ -2189,7 +2190,7 @@ from     = SL_MIN_VERSION
 def      = true
 str      = STR_CONFIG_SETTING_ROAD_SIGNS
 strhelp  = STR_CONFIG_SETTING_ROAD_SIGNS_HELPTEXT
-proc     = RSSettingChanged
+post_cb     = RSSettingChanged
 cat      = SC_EXPERT
 patxname = ""construction.road_signs""
 [SDT_BOOL]
