Adjust linkgraph.aircraft_link_scale feature test

--- a/src/table/settings/settings.ini
+++ b/src/table/settings/settings.ini
@@ -1243,7 +1243,7 @@ interval = 50
 str      = STR_CONFIG_SETTING_AIRCRAFT_PATH_COST
 strval   = STR_CONFIG_SETTING_PERCENTAGE
 strhelp  = STR_CONFIG_SETTING_AIRCRAFT_PATH_COST_HELPTEXT
-extver   = SlXvFeatureTest(XSLFTO_AND, XSLFI_LINKGRAPH_AIRCRAFT, 1, 1)
+extver   = SlXvFeatureTest(XSLFTO_AND, XSLFI_LINKGRAPH_AIRCRAFT)
 
 [SDT_VAR]
 var      = economy.old_town_cargo_factor
