Add roadstop GRF properties to set bridge heights and disallowed pillars

--- a/src/table/settings/settings.ini
+++ b/src/table/settings/settings.ini
@@ -82,6 +82,7 @@ static int64 LinkGraphDistModeXrefChillPP(int64 val);
 static bool LinkGraphDistributionSettingGUI(SettingOnGuiCtrlData &data);
 static bool OrderTownGrowthRate(SettingOnGuiCtrlData &data);
 static bool SpriteZoomMinSettingGUI(SettingOnGuiCtrlData &data);
+static bool AllowRoadStopsUnderBridgesSettingGUI(SettingOnGuiCtrlData &data);
 
 /* End - GUI callbacks */
 
@@ -2044,6 +2045,7 @@ cat      = SC_ADVANCED
 str      = STR_CONFIG_SETTING_ALLOW_ROAD_STATIONS_UNDER_BRIDGES
 strhelp  = STR_CONFIG_SETTING_ALLOW_ROAD_STATIONS_UNDER_BRIDGES_HELPTEXT
 patxname = ""allow_stations_under_bridges.construction.allow_road_stops_under_bridges""
+guiproc  = AllowRoadStopsUnderBridgesSettingGUI
 
 [SDT_BOOL]
 var      = construction.allow_docks_under_bridges
