--- a/src/table/settings/settings.ini
+++ b/src/table/settings/settings.ini
@@ -3891,6 +3891,20 @@ cat      = SC_BASIC
 patxname = ""rivers.game_creation.river_tropics_width""
 
 [SDT_VAR]
+var      = game_creation.coast_tropics_width
+type     = SLE_UINT8
+flags    = SF_GUI_DROPDOWN | SF_NEWGAME_ONLY
+def      = 0
+min      = 0
+max      = 2
+interval = 1
+str      = STR_CONFIG_SETTING_COAST_TROPICS_WIDTH
+strhelp  = STR_CONFIG_SETTING_COAST_TROPICS_WIDTH_HELPTEXT
+strval   = STR_CONFIG_SETTING_COAST_TROPICS_WIDTH_DEFAULT
+cat      = SC_BASIC
+patxname = ""rivers.game_creation.coast_tropics_width""
+
+[SDT_VAR]
 var      = game_creation.lake_size
 type     = SLE_UINT8
 flags    = SF_NEWGAME_ONLY | SF_SCENEDIT_TOO | SF_GUI_0_IS_SPECIAL
