Github: Disable installing gon in OSX release build

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -626,6 +626,7 @@ jobs:
         echo "::endgroup::"
 
     - name: Install gon
+      if: ${{ false }} # disable for now
       env:
         HOMEBREW_NO_AUTO_UPDATE: 1
         HOMEBREW_NO_INSTALL_CLEANUP: 1
