Add setting for width of dynamic snowline range for arctic tree placement
Default: 75%

--- a/src/table/settings/settings.ini
+++ b/src/table/settings/settings.ini
@@ -3804,6 +3804,20 @@ cat      = SC_BASIC
 patxname = ""everest_treeline.construction.trees_around_snow_line_range""
 
 [SDT_VAR]
+var      = construction.trees_around_snow_line_dynamic_range
+type     = SLE_UINT8
+def      = 75
+min      = 0
+max      = 100
+interval = 5
+str      = STR_CONFIG_SETTING_TREES_AROUND_SNOWLINE_DYNAMIC_RANGE
+strhelp  = STR_CONFIG_SETTING_TREES_AROUND_SNOWLINE_DYNAMIC_RANGE_HELPTEXT
+strval   = STR_CONFIG_SETTING_PERCENTAGE
+cat      = SC_EXPERT
+patxname = ""everest_treeline.construction.trees_around_snow_line_dynamic_range""
+post_cb  = [](auto) { UpdateCachedSnowLineBounds(); }
+
+[SDT_VAR]
 var      = construction.tree_growth_rate
 type     = SLE_UINT8
 flags    = SF_GUI_DROPDOWN
