Fix load check of a savegame with realistic braking enabled triggering signal checks on current game

--- a/src/table/settings/settings.ini
+++ b/src/table/settings/settings.ini
@@ -436,6 +436,7 @@ cat      = SC_BASIC
 var      = difficulty.town_council_tolerance
 type     = SLE_UINT8
 from     = SLV_97
+flags    = SF_ENUM_PRE_CB_VALIDATE
 def      = 0
 enumlist = _town_council_approval
 str      = STR_CONFIG_SETTING_CITY_APPROVAL
