Add setting to disable object expiry after a given year

--- a/src/table/settings/settings.ini
+++ b/src/table/settings/settings.ini
@@ -2078,6 +2078,21 @@ str      = STR_CONFIG_SETTING_BUILD_OBJECT_PERMITTED
 strhelp  = STR_CONFIG_SETTING_BUILD_OBJECT_PERMITTED_HELPTEXT
 patxname = ""build_object_area_permitted.construction.build_object_area_permitted""
 
+[SDT_VAR]
+var      = construction.no_expire_objects_after
+type     = SLE_INT32
+flags    = SF_GUI_0_IS_SPECIAL
+def      = 0
+min      = MIN_YEAR
+max      = MAX_YEAR
+interval = 1
+str      = STR_CONFIG_SETTING_NO_EXPIRE_OBJECTS_AFTER
+strhelp  = STR_CONFIG_SETTING_NO_EXPIRE_OBJECTS_AFTER_HELPTEXT
+strval   = STR_CONFIG_SETTING_NO_EXPIRE_OBJECTS_AFTER_VALUE
+cat      = SC_ADVANCED
+patxname = ""construction.no_expire_objects_after""
+post_cb  = [](auto) { InvalidateWindowClassesData(WC_BUILD_OBJECT, 0); }
+
 [SDT_BOOL]
 var      = station.adjacent_stations
 from     = SLV_62
