--- a/src/table/settings/settings.ini
+++ b/src/table/settings/settings.ini
@@ -2094,6 +2094,14 @@ patxname = ""construction.no_expire_objects_after""
 post_cb  = [](auto) { InvalidateWindowClassesData(WC_BUILD_OBJECT, 0); }
 
 [SDT_BOOL]
+var      = construction.ignore_object_intro_dates
+def      = false
+str      = STR_CONFIG_SETTING_IGNORE_OBJECT_INTRO_DATES
+strhelp  = STR_CONFIG_SETTING_IGNORE_OBJECT_INTRO_DATES_HELPTEXT
+patxname = ""construction.ignore_object_intro_dates""
+post_cb  = [](auto) { InvalidateWindowClassesData(WC_BUILD_OBJECT, 0); }
+
+[SDT_BOOL]
 var      = station.adjacent_stations
 from     = SLV_62
 def      = true
