VarAction2: Move optimiser flags to a separate setting

--- a/src/table/settings/settings.ini
+++ b/src/table/settings/settings.ini
@@ -5999,3 +5999,13 @@ min      = 0
 max      = 0xFFFFFFFF
 cat      = SC_EXPERT
 patxname = ""debug.chicken_bits""
+
+[SDT_VAR]
+var      = debug.newgrf_optimiser_flags
+type     = SLE_UINT32
+flags    = SF_NOT_IN_CONFIG | SF_NO_NEWGAME | SF_NO_NETWORK
+def      = 0
+min      = 0
+max      = 0xFFFFFFFF
+cat      = SC_EXPERT
+patxname = ""debug.newgrf_optimiser_flags""
