Add support for enum client settings

--- a/src/table/settings/settings.ini
+++ b/src/table/settings/settings.ini
@@ -153,6 +153,7 @@ SDTC_LIST  =  SDTC_LIST(              $var, $type, $flags, $def,                
 SDTC_OMANY = SDTC_OMANY(              $var, $type, $flags, $def,             $max, $full,     $str, $strhelp, $strval, $pre_cb, $post_cb, $from, $to, $extver,        $cat, $guiproc, $startup, $patxname),
 SDTC_SSTR  =  SDTC_SSTR(              $var, $type, $flags, $def,             $length,                                  $pre_cb, $post_cb, $from, $to, $extver,        $cat, $guiproc, $startup, $patxname),
 SDTC_VAR   =   SDTC_VAR(              $var, $type, $flags, $def,       $min, $max, $interval, $str, $strhelp, $strval, $pre_cb, $post_cb, $from, $to, $extver,        $cat, $guiproc, $startup, $patxname),
+SDTC_ENUM   = SDTC_ENUM(              $var, $type, $flags, $def,                              $str, $strhelp,          $pre_cb, $post_cb, $from, $to, $extver,        $cat, $guiproc, $startup, $patxname, $enumlist),
 SDT_BOOL   =   SDT_BOOL(GameSettings, $var,        $flags, $def,                              $str, $strhelp, $strval, $pre_cb, $post_cb, $from, $to, $extver,        $cat, $guiproc, $startup, $patxname),
 SDT_OMANY  =  SDT_OMANY(GameSettings, $var, $type, $flags, $def,             $max, $full,     $str, $strhelp, $strval, $pre_cb, $post_cb, $from, $to, $extver, $load, $cat, $guiproc, $startup, $patxname),
 SDT_SSTR   =   SDT_SSTR(GameSettings, $var, $type, $flags, $def,                                                       $pre_cb, $post_cb, $from, $to, $extver,        $cat, $guiproc, $startup, $patxname),
