Add setting to disable water animation depending on zoom level

--- a/src/table/settings/settings.ini
+++ b/src/table/settings/settings.ini
@@ -131,6 +131,14 @@ static const SettingDescEnumEntry _station_delivery_mode[] = {
 { 0, STR_NULL }
 };
 
+static const SettingDescEnumEntry _disable_water_animation[] = {
+{ 255, STR_CONFIG_SETTING_OFF },
+{ 3, STR_CONFIG_SETTING_DISABLE_WATER_ANIMATION_8X },
+{ 4, STR_CONFIG_SETTING_DISABLE_WATER_ANIMATION_16X },
+{ 5, STR_CONFIG_SETTING_DISABLE_WATER_ANIMATION_32X },
+{ 0, STR_NULL }
+};
+
 /* Some settings do not need to be synchronised when playing in multiplayer.
  * These include for example the GUI settings and will not be saved with the
  * savegame.
@@ -5501,6 +5509,16 @@ def      = false
 str      = STR_CONFIG_SETTING_ALLOW_HIDE_WAYPOINT_LABEL
 strhelp  = STR_CONFIG_SETTING_ALLOW_HIDE_WAYPOINT_LABEL_HELPTEXT
 post_cb  = [](auto) { MarkWholeScreenDirty(); InvalidateWindowClassesData(WC_WAYPOINT_VIEW, 0); }
+
+[SDTC_ENUM]
+var      = gui.disable_water_animation
+type     = SLE_UINT8
+flags    = SF_NOT_IN_SAVE | SF_NO_NETWORK_SYNC
+def      = 255
+enumlist = _disable_water_animation
+str      = STR_CONFIG_SETTING_DISABLE_WATER_ANIMATION
+strhelp  = STR_CONFIG_SETTING_DISABLE_WATER_ANIMATION_HELPTEXT
+post_cb  = SpriteZoomMinChanged
 
 ; For the dedicated build we'll enable dates in logs by default.
 [SDTC_BOOL]
