--- a/src/table/settings/settings.ini
+++ b/src/table/settings/settings.ini
@@ -969,7 +969,7 @@ patxname = ""max_town_heightlevel.economy.max_town_heightlevel""
 base     = GameSettings
 var      = economy.min_town_land_area
 type     = SLE_UINT16
-guiflags = SGF_0ISDISABLED
+flags    = SF_GUI_0_IS_SPECIAL
 def      = 0
 min      = 0
 max      = 400
@@ -984,7 +984,7 @@ patxname = ""max_town_heightlevel.economy.min_town_land_area""
 base     = GameSettings
 var      = economy.min_city_land_area
 type     = SLE_UINT16
-guiflags = SGF_0ISDISABLED
+flags    = SF_GUI_0_IS_SPECIAL
 def      = 75
 min      = 0
 max      = 400
