--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -11,6 +11,7 @@ add_files(
     endian_func.hpp
     endian_type.hpp
     enum_type.hpp
+    hash_func.hpp
     geometry_func.cpp
     geometry_func.hpp
     geometry_type.hpp
