--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -272,6 +272,8 @@ add_files(
     newgrf_industrytiles.cpp
     newgrf_industrytiles.h
     newgrf_industrytiles_analysis.h
+    newgrf_newlandscape.cpp
+    newgrf_newlandscape.h
     newgrf_newsignals.cpp
     newgrf_newsignals.h
     newgrf_object.cpp
