Add game setting to limit train lookahead to signal aspect
In realistic braking mode when multi-aspect signalling enabled by GRF

--- a/src/table/settings/settings.ini
+++ b/src/table/settings/settings.ini
@@ -125,6 +125,12 @@ static const SettingDescEnumEntry _train_braking_model[] = {
 { 0, STR_NULL }
 };
 
+static const SettingDescEnumEntry _realistic_braking_aspect_limited[] = {
+{ TRBALM_OFF, STR_CONFIG_SETTING_OFF },
+{ TRBALM_ON, STR_CONFIG_SETTING_TRAIN_BRAKING_ASPECT_LIMITED_ON },
+{ 0, STR_NULL }
+};
+
 static const SettingDescEnumEntry _station_delivery_mode[] = {
 { SD_NEAREST_FIRST, STR_CONFIG_SETTING_ORIGINAL},
 { SD_BALANCED, STR_CONFIG_SETTING_DELIVERY_BALANCED},
@@ -1326,6 +1332,16 @@ pre_cb   = CheckTrainBrakingModelChange
 post_cb  = TrainBrakingModelChanged
 cat      = SC_EXPERT
 patxname = ""realistic_braking.vehicle.train_braking_model""
+
+[SDT_ENUM]
+var      = vehicle.realistic_braking_aspect_limited
+type     = SLE_UINT8
+def      = TRBALM_OFF
+enumlist = _realistic_braking_aspect_limited
+str      = STR_CONFIG_SETTING_REALISTIC_BRAKING_ASPECT_LIMITED
+strhelp  = STR_CONFIG_SETTING_REALISTIC_BRAKING_ASPECT_LIMITED_HELPTEXT
+cat      = SC_EXPERT
+patxname = ""realistic_braking.vehicle.realistic_braking_aspect_limited""
 
 [SDT_VAR]
 var      = vehicle.roadveh_acceleration_model
