Disable uninitialised warnings for MSYS/MinGW CI build

--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -377,7 +377,7 @@ jobs:
         cd build
 
         echo "::group::CMake"
-        cmake .. -G"MSYS Makefiles"
+        cmake .. -DOPTION_NO_WARN_UNINIT=1 -G"MSYS Makefiles"
         echo "::endgroup::"
 
         echo "::group::Build"
