Add GUI setting to show order occupancy by default

--- a/src/table/settings/settings.ini
+++ b/src/table/settings/settings.ini
@@ -5536,6 +5536,14 @@ str      = STR_CONFIG_SETTING_DISABLE_WATER_ANIMATION
 strhelp  = STR_CONFIG_SETTING_DISABLE_WATER_ANIMATION_HELPTEXT
 post_cb  = SpriteZoomMinChanged
 
+[SDTC_BOOL]
+var      = gui.show_order_occupancy_by_default
+flags    = SF_NOT_IN_SAVE | SF_NO_NETWORK_SYNC
+def      = false
+str      = STR_CONFIG_SETTING_SHOW_ORDER_OCCUPANCY_BY_DEFAULT
+strhelp  = STR_CONFIG_SETTING_SHOW_ORDER_OCCUPANCY_BY_DEFAULT_HELPTEXT
+cat      = SC_BASIC
+
 ; For the dedicated build we'll enable dates in logs by default.
 [SDTC_BOOL]
 ifdef    = DEDICATED
