--- a/src/table/settings/settings.ini
+++ b/src/table/settings/settings.ini
@@ -5544,6 +5544,15 @@ str      = STR_CONFIG_SETTING_SHOW_ORDER_OCCUPANCY_BY_DEFAULT
 strhelp  = STR_CONFIG_SETTING_SHOW_ORDER_OCCUPANCY_BY_DEFAULT_HELPTEXT
 cat      = SC_BASIC
 
+[SDTC_BOOL]
+var      = gui.show_group_hierarchy_name
+flags    = SF_NOT_IN_SAVE | SF_NO_NETWORK_SYNC
+def      = false
+str      = STR_CONFIG_SETTING_SHOW_GROUP_HIERARCHY_NAME
+strhelp  = STR_CONFIG_SETTING_SHOW_GROUP_HIERARCHY_NAME_HELPTEXT
+post_cb  = [](auto) { MarkWholeScreenDirty(); }
+cat      = SC_BASIC
+
 ; For the dedicated build we'll enable dates in logs by default.
 [SDTC_BOOL]
 ifdef    = DEDICATED
