Only apply sprite_zoom_min setting when suitable zoom levels are available
Only discard sprite zoom levels when a suitable higher zoom level is
defined in the same colour mode

See: https://github.com/OpenTTD/OpenTTD/issues/9804

--- a/src/table/settings/settings.ini
+++ b/src/table/settings/settings.ini
@@ -82,7 +82,6 @@ static int64 LinkGraphDistModeXrefChillPP(int64 val);
 
 static bool LinkGraphDistributionSettingGUI(SettingOnGuiCtrlData &data);
 static bool OrderTownGrowthRate(SettingOnGuiCtrlData &data);
-static bool SpriteZoomMinSettingGUI(SettingOnGuiCtrlData &data);
 static bool AllowRoadStopsUnderBridgesSettingGUI(SettingOnGuiCtrlData &data);
 
 /* End - GUI callbacks */
@@ -4480,7 +4479,7 @@ startup  = true
 [SDTC_VAR]
 var      = gui.sprite_zoom_min
 type     = SLE_UINT8
-flags    = SF_NOT_IN_SAVE | SF_NO_NETWORK_SYNC | SF_GUI_DROPDOWN | SF_GUI_ADVISE_DEFAULT
+flags    = SF_NOT_IN_SAVE | SF_NO_NETWORK_SYNC | SF_GUI_DROPDOWN
 def      = ZOOM_LVL_MIN
 min      = ZOOM_LVL_MIN
 max      = ZOOM_LVL_OUT_4X
@@ -4488,7 +4487,6 @@ str      = STR_CONFIG_SETTING_SPRITE_ZOOM_MIN
 strhelp  = STR_CONFIG_SETTING_SPRITE_ZOOM_MIN_HELPTEXT
 strval   = STR_CONFIG_SETTING_SPRITE_ZOOM_LVL_MIN
 post_cb  = SpriteZoomMinChanged
-guiproc  = SpriteZoomMinSettingGUI
 cat      = SC_EXPERT
 
 [SDTC_BOOL]
