Move NewGRF analysis to separate files

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -239,6 +239,8 @@ add_files(
     newgrf_airporttiles.h
     newgrf_animation_base.h
     newgrf_animation_type.h
+    newgrf_analysis.cpp
+    newgrf_analysis.h
     newgrf_cache_check.h
     newgrf_callbacks.h
     newgrf_canal.cpp
