Add a setting to show the introduction year for train wagons

--- a/src/table/settings/settings.ini
+++ b/src/table/settings/settings.ini
@@ -5451,6 +5451,15 @@ strhelp  = STR_CONFIG_SETTING_SHOW_NEWGRF_NAME_HELPTEXT
 post_cb  = [](auto) { MarkWholeScreenDirty(); }
 cat      = SC_ADVANCED
 
+[SDTC_BOOL]
+var      = gui.show_wagon_intro_year
+flags    = SF_NOT_IN_SAVE | SF_NO_NETWORK_SYNC
+def      = false
+str      = STR_CONFIG_SETTING_SHOW_WAGON_INTRO_YEAR
+strhelp  = STR_CONFIG_SETTING_SHOW_WAGON_INTRO_YEAR_HELPTEXT
+post_cb  = [](auto) { MarkWholeScreenDirty(); }
+cat      = SC_ADVANCED
+
 [SDTC_VAR]
 var      = gui.linkgraph_colours
 type     = SLE_UINT8
