--- a/src/table/settings/settings.ini
+++ b/src/table/settings/settings.ini
@@ -5557,8 +5557,17 @@ flags    = SF_NOT_IN_SAVE | SF_NO_NETWORK_SYNC
 def      = false
 str      = STR_CONFIG_SETTING_SHOW_GROUP_HIERARCHY_NAME
 strhelp  = STR_CONFIG_SETTING_SHOW_GROUP_HIERARCHY_NAME_HELPTEXT
-post_cb  = [](auto) { MarkWholeScreenDirty(); }
+post_cb  = [](auto) { InvalidateWindowClassesData(WC_GAME_OPTIONS); MarkWholeScreenDirty(); }
 cat      = SC_BASIC
+
+[SDTC_BOOL]
+var      = gui.show_vehicle_group_hierarchy_name
+flags    = SF_NOT_IN_SAVE | SF_NO_NETWORK_SYNC
+def      = false
+str      = STR_CONFIG_SETTING_SHOW_VEHICLE_GROUP_HIERARCHY_NAME
+strhelp  = STR_CONFIG_SETTING_SHOW_VEHICLE_GROUP_HIERARCHY_NAME_HELPTEXT
+post_cb  = [](auto) { MarkWholeScreenDirty(); }
+cat      = SC_ADVANCED
 
 ; For the dedicated build we'll enable dates in logs by default.
 [SDTC_BOOL]
