Fix #435: Clarify time duration of infrastructure sharing fee settings

--- a/src/table/settings/settings.ini
+++ b/src/table/settings/settings.ini
@@ -2857,6 +2857,7 @@ min      = 0
 max      = 1000000
 interval = 10
 str      = STR_CONFIG_SETTING_SHARING_FEE_RAIL
+strhelp  = STR_CONFIG_SETTING_SHARING_FEE_HELPTEXT
 strval   = STR_JUST_CURRENCY_LONG
 extver   = SlXvFeatureTest(XSLFTO_AND, XSLFI_INFRA_SHARING)
 patxname = ""infra_sharing.economy.sharing_fee.rail""
@@ -2870,6 +2871,7 @@ min      = 0
 max      = 1000000
 interval = 10
 str      = STR_CONFIG_SETTING_SHARING_FEE_ROAD
+strhelp  = STR_CONFIG_SETTING_SHARING_FEE_HELPTEXT
 strval   = STR_JUST_CURRENCY_LONG
 extver   = SlXvFeatureTest(XSLFTO_AND, XSLFI_INFRA_SHARING)
 patxname = ""infra_sharing.economy.sharing_fee.road""
@@ -2883,6 +2885,7 @@ min      = 0
 max      = 1000000
 interval = 10
 str      = STR_CONFIG_SETTING_SHARING_FEE_WATER
+strhelp  = STR_CONFIG_SETTING_SHARING_FEE_HELPTEXT
 strval   = STR_JUST_CURRENCY_LONG
 extver   = SlXvFeatureTest(XSLFTO_AND, XSLFI_INFRA_SHARING)
 patxname = ""infra_sharing.economy.sharing_fee.water""
@@ -2896,6 +2899,7 @@ min      = 0
 max      = 1000000
 interval = 10
 str      = STR_CONFIG_SETTING_SHARING_FEE_AIR
+strhelp  = STR_CONFIG_SETTING_SHARING_FEE_HELPTEXT
 strval   = STR_JUST_CURRENCY_LONG
 extver   = SlXvFeatureTest(XSLFTO_AND, XSLFI_INFRA_SHARING)
 patxname = ""infra_sharing.economy.sharing_fee.air""
