--- a/src/table/settings/settings.ini
+++ b/src/table/settings/settings.ini
@@ -5556,6 +5556,15 @@ strhelp  = STR_CONFIG_SETTING_SHOW_ORDER_OCCUPANCY_BY_DEFAULT_HELPTEXT
 cat      = SC_BASIC
 
 [SDTC_BOOL]
+var      = gui.show_order_management_button
+flags    = SF_NOT_IN_SAVE | SF_NO_NETWORK_SYNC
+def      = true
+str      = STR_CONFIG_SETTING_SHOW_ORDER_MANAGEMENT_BY_DEFAULT
+strhelp  = STR_CONFIG_SETTING_SHOW_ORDER_MANAGEMENT_BY_DEFAULT_HELPTEXT
+post_cb  = [](auto) { InvalidateWindowClassesData(WC_VEHICLE_ORDERS); }
+cat      = SC_BASIC
+
+[SDTC_BOOL]
 var      = gui.show_group_hierarchy_name
 flags    = SF_NOT_IN_SAVE | SF_NO_NETWORK_SYNC
 def      = false
