Add setting for if/when towns can build tunnels
Default to allowed

--- a/src/table/settings/settings.ini
+++ b/src/table/settings/settings.ini
@@ -935,6 +935,20 @@ def      = true
 str      = STR_CONFIG_SETTING_ALLOW_TOWN_LEVEL_CROSSINGS
 strhelp  = STR_CONFIG_SETTING_ALLOW_TOWN_LEVEL_CROSSINGS_HELPTEXT
 
+[SDT_VAR]
+var      = economy.town_build_tunnels
+type     = SLE_UINT8
+flags    = SF_GUI_DROPDOWN
+def      = TTM_ALLOWED
+min      = TTM_BEGIN
+max      = TTM_END - 1
+interval = 1
+str      = STR_CONFIG_SETTING_TOWN_TUNNELS
+strhelp  = STR_CONFIG_SETTING_TOWN_TUNNELS_HELPTEXT
+strval   = STR_CONFIG_SETTING_TOWN_TUNNELS_FORBIDDEN
+cat      = SC_BASIC
+patxname = ""economy.town_build_tunnels""
+
 [SDT_XREF]
 xref     = ""economy.old_town_cargo_factor""
 extver   = SlXvFeatureTest(XSLFTO_AND, XSLFI_CHILLPP)
