Add setting to limit length of continuous inclined roads built by towns
Default to max 4 tiles

--- a/src/table/settings/settings.ini
+++ b/src/table/settings/settings.ini
@@ -949,6 +949,20 @@ strval   = STR_CONFIG_SETTING_TOWN_TUNNELS_FORBIDDEN
 cat      = SC_BASIC
 patxname = ""economy.town_build_tunnels""
 
+[SDT_VAR]
+var      = economy.town_max_road_slope
+type     = SLE_UINT8
+flags    = SF_GUI_0_IS_SPECIAL
+def      = 4
+min      = 0
+max      = 8
+interval = 1
+str      = STR_CONFIG_SETTING_TOWN_MAX_ROAD_SLOPE
+strhelp  = STR_CONFIG_SETTING_TOWN_MAX_ROAD_SLOPE_HELPTEXT
+strval   = STR_CONFIG_SETTING_TOWN_MAX_ROAD_SLOPE_VALUE
+cat      = SC_BASIC
+patxname = ""economy.town_max_road_slope""
+
 [SDT_XREF]
 xref     = ""economy.old_town_cargo_factor""
 extver   = SlXvFeatureTest(XSLFTO_AND, XSLFI_CHILLPP)
