Allow overriding town settings on a per-town basis
Add a setting for whether this is allowed for non-privileged
multiplayer clients

--- a/src/table/settings/settings.ini
+++ b/src/table/settings/settings.ini
@@ -27,6 +27,7 @@ static bool TownCouncilToleranceAdjust(int32 &new_value);
 static void DifficultyNoiseChange(int32 new_value);
 static void DifficultyMoneyCheatMultiplayerChange(int32 new_value);
 static void DifficultyRenameTownsMultiplayerChange(int32 new_value);
+static void DifficultyOverrideTownSettingsMultiplayerChange(int32 new_value);
 static void MaxNoAIsChange(int32 new_value);
 static bool CheckRoadSide(int32 &new_value);
 static void RoadSideChanged(int32 new_value);
@@ -475,6 +476,15 @@ strhelp  = STR_CONFIG_SETTING_RENAME_TOWNS_MULTIPLAYER_HELPTEXT
 post_cb  = DifficultyRenameTownsMultiplayerChange
 cat      = SC_EXPERT
 patxname = ""cheat.difficulty.rename_towns_in_multiplayer""
+
+[SDT_BOOL]
+var      = difficulty.override_town_settings_in_multiplayer
+def      = false
+str      = STR_CONFIG_SETTING_OVERRIDE_TOWN_SETTINGS_MULTIPLAYER
+strhelp  = STR_CONFIG_SETTING_OVERRIDE_TOWN_SETTINGS_MULTIPLAYER_HELPTEXT
+post_cb  = DifficultyOverrideTownSettingsMultiplayerChange
+cat      = SC_EXPERT
+patxname = ""cheat.difficulty.override_town_settings_in_multiplayer""
 
 [SDTG_VAR]
 name     = ""diff_level""
