Change show_order_management_button setting to default off

--- a/src/table/settings/settings.ini
+++ b/src/table/settings/settings.ini
@@ -5596,7 +5596,7 @@ cat      = SC_BASIC
 [SDTC_BOOL]
 var      = gui.show_order_management_button
 flags    = SF_NOT_IN_SAVE | SF_NO_NETWORK_SYNC
-def      = true
+def      = false
 str      = STR_CONFIG_SETTING_SHOW_ORDER_MANAGEMENT_BY_DEFAULT
 strhelp  = STR_CONFIG_SETTING_SHOW_ORDER_MANAGEMENT_BY_DEFAULT_HELPTEXT
 post_cb  = [](auto) { InvalidateWindowClassesData(WC_VEHICLE_ORDERS); }
