--- a/src/table/settings/settings.ini
+++ b/src/table/settings/settings.ini
@@ -5159,7 +5159,7 @@ cat      = SC_BASIC
 [SDTC_BOOL]
 var      = gui.no_depot_order_warn
 flags    = SF_NOT_IN_SAVE | SF_NO_NETWORK_SYNC
-def      = true
+def      = false
 str      = STR_CONFIG_SETTING_WARN_NO_DEPOT_ORDER
 strhelp  = STR_CONFIG_SETTING_WARN_NO_DEPOT_ORDER_HELPTEXT
 
