--- a/src/table/settings/settings.ini
+++ b/src/table/settings/settings.ini
@@ -4664,20 +4664,37 @@ str      = STR_CONFIG_SETTING_VIEWPORT_MAP_SHOW_TUNNELS
 post_cb  = ViewportMapShowTunnelModeChanged
 
 [SDTC_VAR]
-var      = gui.show_vehicle_route
-type     = SLE_UINT32
+var      = gui.show_vehicle_route_mode
+type     = SLE_UINT8
 flags    = SF_NOT_IN_SAVE | SF_NO_NETWORK_SYNC | SF_GUI_DROPDOWN
 def      = 1
 min      = 0
-max      = 1
+max      = 2
 interval = 1
+str      = STR_CONFIG_SETTING_SHOW_VEHICLE_ROUTE_MODE
+strhelp  = STR_CONFIG_SETTING_SHOW_VEHICLE_ROUTE_MODE_HELPTEXT
+strval   = STR_CONFIG_SETTING_SHOW_VEHICLE_ROUTE_MODE_OFF
+post_cb  = [](auto) { InvalidateWindowClassesData(WC_GAME_OPTIONS); MarkWholeScreenDirty(); }
+
+[SDTC_BOOL]
+var      = gui.show_vehicle_route_steps
+flags    = SF_NOT_IN_SAVE | SF_NO_NETWORK_SYNC
+def      = true
+str      = STR_CONFIG_SETTING_SHOW_VEHICLE_ROUTE_STEPS
+strhelp  = STR_CONFIG_SETTING_SHOW_VEHICLE_ROUTE_STEPS_HELPTEXT
+post_cb  = [](auto) { InvalidateWindowClassesData(WC_GAME_OPTIONS); MarkWholeScreenDirty(); }
+
+[SDTC_BOOL]
+var      = gui.show_vehicle_route
+flags    = SF_NOT_IN_SAVE | SF_NO_NETWORK_SYNC
+def      = true
 str      = STR_CONFIG_SETTING_VIEWPORT_MAP_SHOW_VEHICLE_ROUTE
-strval   = STR_CONFIG_SETTING_VIEWPORT_MAP_SHOW_VEHICLE_ROUTE_NO
-post_cb  = [](auto) { MarkWholeScreenDirty(); }
+strhelp  = STR_CONFIG_SETTING_VIEWPORT_MAP_SHOW_VEHICLE_ROUTE_HELPTEXT
+post_cb  = [](auto) { InvalidateWindowClassesData(WC_GAME_OPTIONS); MarkWholeScreenDirty(); }
 
 [SDTC_VAR]
 var      = gui.dash_level_of_route_lines
-type     = SLE_UINT32
+type     = SLE_UINT8
 flags    = SF_NOT_IN_SAVE | SF_NO_NETWORK_SYNC | SF_GUI_0_IS_SPECIAL
 def      = 0
 min      = 0
@@ -5342,13 +5359,6 @@ max      = 5
 str      = STR_CONFIG_SETTING_GRAPH_LINE_THICKNESS
 strhelp  = STR_CONFIG_SETTING_GRAPH_LINE_THICKNESS_HELPTEXT
 strval   = STR_JUST_COMMA
-post_cb  = [](auto) { MarkWholeScreenDirty(); }
-
-[SDTC_BOOL]
-var      = gui.show_vehicle_route_steps
-flags    = SF_NOT_IN_SAVE | SF_NO_NETWORK_SYNC
-def      = true
-str      = STR_CONFIG_SETTING_SHOW_VEHICLE_ROUTE_STEPS
 post_cb  = [](auto) { MarkWholeScreenDirty(); }
 
 [SDTC_BOOL]
