Add a "if breakdowns enabled" mode to the no depot order warn setting

--- a/src/table/settings/settings.ini
+++ b/src/table/settings/settings.ini
@@ -147,6 +147,13 @@ static const SettingDescEnumEntry _disable_water_animation[] = {
 { 0, STR_NULL }
 };
 
+static const SettingDescEnumEntry _no_depot_order_warn[] = {
+{ 0, STR_CONFIG_SETTING_OFF },
+{ 2, STR_CONFIG_SETTING_WARN_NO_DEPOT_ORDER_IF_BREAKDOWNS_ON },
+{ 1, STR_CONFIG_SETTING_ON },
+{ 0, STR_NULL }
+};
+
 /* Some settings do not need to be synchronised when playing in multiplayer.
  * These include for example the GUI settings and will not be saved with the
  * savegame.
@@ -5173,10 +5180,12 @@ strhelp  = STR_CONFIG_SETTING_ORDER_REVIEW_HELPTEXT
 strval   = STR_CONFIG_SETTING_ORDER_REVIEW_OFF
 cat      = SC_BASIC
 
-[SDTC_BOOL]
+[SDTC_ENUM]
 var      = gui.no_depot_order_warn
-flags    = SF_NOT_IN_SAVE | SF_NO_NETWORK_SYNC
-def      = false
+type     = SLE_UINT8
+flags    = SF_NOT_IN_SAVE | SF_NO_NETWORK_SYNC | SF_CONVERT_BOOL_TO_INT
+def      = 0
+enumlist = _no_depot_order_warn
 str      = STR_CONFIG_SETTING_WARN_NO_DEPOT_ORDER
 strhelp  = STR_CONFIG_SETTING_WARN_NO_DEPOT_ORDER_HELPTEXT
 
