--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -219,6 +219,11 @@ add_files(
     landscape.h
     landscape_type.h
     language.h
+    league_base.h
+    league_cmd.cpp
+    league_gui.h
+    league_gui.cpp
+    league_type.h
     livery.h
     main_gui.cpp
     map.cpp
