--- a/src/table/settings/settings.ini
+++ b/src/table/settings/settings.ini
@@ -5612,6 +5612,15 @@ flags    = SF_NOT_IN_SAVE | SF_NO_NETWORK_SYNC
 def      = true
 str      = STR_CONFIG_SETTING_DUAL_PANE_TRAIN_PURCHASE_WINDOW
 strhelp  = STR_CONFIG_SETTING_DUAL_PANE_TRAIN_PURCHASE_WINDOW_HELPTEXT
+post_cb  = [](auto) { InvalidateWindowClassesData(WC_GAME_OPTIONS); }
+
+[SDTC_BOOL]
+var      = gui.dual_pane_train_purchase_window_dual_buttons
+flags    = SF_NOT_IN_SAVE | SF_NO_NETWORK_SYNC
+def      = true
+str      = STR_CONFIG_SETTING_DUAL_PANE_TRAIN_PURCHASE_WINDOW_DUAL_BUTTONS
+strhelp  = STR_CONFIG_SETTING_DUAL_PANE_TRAIN_PURCHASE_WINDOW_DUAL_BUTTONS_HELPTEXT
+post_cb  = [](auto) { InvalidateWindowClassesData(WC_BUILD_VEHICLE); InvalidateWindowClassesData(WC_BUILD_VIRTUAL_TRAIN); }
 
 [SDTC_BOOL]
 var      = gui.allow_hiding_waypoint_labels
