--- a/src/table/settings/settings.ini
+++ b/src/table/settings/settings.ini
@@ -4403,6 +4403,14 @@ str      = STR_CONFIG_SETTING_RIGHT_MOUSE_WND_CLOSE
 strhelp  = STR_CONFIG_SETTING_RIGHT_MOUSE_WND_CLOSE_HELPTEXT
 cat      = SC_BASIC
 
+[SDTC_BOOL]
+var      = gui.right_mouse_wnd_dont_close_sticky
+flags    = SF_NOT_IN_SAVE | SF_NO_NETWORK_SYNC
+def      = false
+str      = STR_CONFIG_SETTING_RIGHT_MOUSE_DONT_CLOSE_PINNED
+strhelp  = STR_CONFIG_SETTING_RIGHT_MOUSE_DONT_CLOSE_PINNED_HELPTEXT
+cat      = SC_BASIC
+
 ; We might need to emulate a right mouse button on mac
 [SDTC_VAR]
 ifdef    = __APPLE__
