Add auxiliary data type for extra command data

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -84,6 +84,7 @@ add_files(
     clear_map.h
     cmd_helper.h
     command.cpp
+    command_aux.h
     command_func.h
     command_type.h
     company_base.h
