Store the gui.zoom_max setting under a different name in the config file
So that it isn't overwritten by vanilla.
Otherwise use the vanilla setting value if present and outside the
vanilla range.

--- a/src/table/settings/settings.ini
+++ b/src/table/settings/settings.ini
@@ -86,6 +86,7 @@ static int64 LinkGraphDistModeXrefChillPP(int64 val);
 static bool LinkGraphDistributionSettingGUI(SettingOnGuiCtrlData &data);
 static bool OrderTownGrowthRate(SettingOnGuiCtrlData &data);
 static bool AllowRoadStopsUnderBridgesSettingGUI(SettingOnGuiCtrlData &data);
+static bool ZoomMaxCfgName(SettingOnGuiCtrlData &data);
 
 /* End - GUI callbacks */
 
@@ -4536,6 +4537,7 @@ str      = STR_CONFIG_SETTING_ZOOM_MAX
 strhelp  = STR_CONFIG_SETTING_ZOOM_MAX_HELPTEXT
 strval   = STR_CONFIG_SETTING_ZOOM_LVL_OUT_2X
 post_cb  = ZoomMinMaxChanged
+guiproc  = ZoomMaxCfgName
 startup  = true
 
 [SDTC_VAR]
