Add setting to disable NewGRF inflation flag

--- a/src/table/settings/settings.ini
+++ b/src/table/settings/settings.ini
@@ -3193,6 +3193,12 @@ strval   = STR_JUST_COMMA
 cat      = SC_BASIC
 patxname = ""economy.random_road_reconstruction""
 
+[SDT_BOOL]
+var      = economy.disable_inflation_newgrf_flag
+def      = false
+cat      = SC_EXPERT
+patxname = ""economy.disable_inflation_newgrf_flag""
+
 ##
 [SDT_VAR]
 var      = pf.wait_for_pbs_path
