Fix day length changes with scheduled dispatch and timetable start times
When time is in minutes

See: #472

--- a/src/table/settings/settings.ini
+++ b/src/table/settings/settings.ini
@@ -52,6 +52,7 @@ static void SpriteZoomMinChanged(int32 new_value);
 static void MaxVehiclesChanged(int32 new_value);
 static void InvalidateShipPathCache(int32 new_value);
 static void ImprovedBreakdownsSettingChanged(int32 new_value);
+static bool DayLengthPreChange(int32 &new_value);
 static void DayLengthChanged(int32 new_value);
 static void EnableSingleVehSharedOrderGuiChanged(int32 new_value);
 static void CheckYapfRailSignalPenalties(int32 new_value);
@@ -2224,6 +2225,7 @@ max      = 125
 str      = STR_CONFIG_SETTING_DAY_LENGTH_FACTOR
 strhelp  = STR_CONFIG_SETTING_DAY_LENGTH_FACTOR_HELPTEXT
 strval   = STR_JUST_COMMA
+pre_cb   = DayLengthPreChange
 post_cb  = DayLengthChanged
 cat      = SC_BASIC
 extver   = SlXvFeatureTest(XSLFTO_AND, XSLFI_VARIABLE_DAY_LENGTH)
