Enable loading game_creation.custom_industry_number from upstream saves

--- a/src/table/settings/settings.ini
+++ b/src/table/settings/settings.ini
@@ -3870,6 +3870,7 @@ cat      = SC_BASIC
 [SDT_VAR]
 var      = game_creation.custom_industry_number
 type     = SLE_UINT16
+flags    = SF_ENABLE_UPSTREAM_LOAD
 def      = 1
 min      = 1
 max      = 64000
