Fix the viewport map default display mode setting
Routes value was missing
Adjust strings

See: #475

--- a/src/table/settings/settings.ini
+++ b/src/table/settings/settings.ini
@@ -156,6 +156,14 @@ static const SettingDescEnumEntry _no_depot_order_warn[] = {
 { 0, STR_NULL }
 };
 
+static const SettingDescEnumEntry _viewport_map_modes[] = {
+{ VPMT_VEGETATION, STR_SMALLMAP_TYPE_VEGETATION },
+{ VPMT_OWNER,      STR_SMALLMAP_TYPE_OWNERS },
+{ VPMT_ROUTES,     STR_SMALLMAP_TYPE_ROUTES },
+{ VPMT_INDUSTRY,   STR_SMALLMAP_TYPE_INDUSTRIES },
+{ 0, STR_NULL }
+};
+
 /* Some settings do not need to be synchronised when playing in multiplayer.
  * These include for example the GUI settings and will not be saved with the
  * savegame.
@@ -4733,16 +4741,14 @@ interval = 1
 str      = STR_CONFIG_SETTING_VIEWPORT_MAP_SHOW_SCROLLING_VP
 strval   = STR_CONFIG_SETTING_VIEWPORT_MAP_SHOW_SCROLLING_VP_NOTHING
 
-[SDTC_VAR]
+[SDTC_ENUM]
 var      = gui.default_viewport_map_mode
 type     = SLE_UINT32
-flags    = SF_NOT_IN_SAVE | SF_NO_NETWORK_SYNC | SF_GUI_DROPDOWN
+flags    = SF_NOT_IN_SAVE | SF_NO_NETWORK_SYNC
 def      = 0
-min      = 0
-max      = 2
-interval = 1
+enumlist = _viewport_map_modes
 str      = STR_CONFIG_SETTING_VIEWPORT_MAP_DEFAULT_MODE
-strval   = STR_CONFIG_SETTING_VIEWPORT_MAP_DEFAULT_MODE_VEGETATION
+strhelp  = STR_CONFIG_SETTING_VIEWPORT_MAP_DEFAULT_MODE_HELPTEXT
 
 [SDTC_VAR]
 var      = gui.action_when_viewport_map_is_dblclicked
