--- a/src/table/settings/settings.ini
+++ b/src/table/settings/settings.ini
@@ -993,6 +993,14 @@ strval   = STR_CONFIG_SETTING_TOWN_MAX_ROAD_SLOPE_VALUE
 cat      = SC_BASIC
 patxname = ""economy.town_max_road_slope""
 
+[SDT_BOOL]
+var      = economy.allow_town_bridges
+def      = true
+str      = STR_CONFIG_SETTING_ALLOW_TOWN_BRIDGES
+strhelp  = STR_CONFIG_SETTING_ALLOW_TOWN_BRIDGES_HELPTEXT
+cat      = SC_BASIC
+patxname = ""economy.allow_town_bridges""
+
 [SDT_XREF]
 xref     = ""economy.old_town_cargo_factor""
 extver   = SlXvFeatureTest(XSLFTO_AND, XSLFI_CHILLPP)
