--- a/src/table/settings/settings.ini
+++ b/src/table/settings/settings.ini
@@ -1098,7 +1098,7 @@ var      = linkgraph.recalc_not_scaled_by_daylength
 def      = true
 str      = STR_CONFIG_SETTING_LINKGRAPH_NOT_DAYLENGTH_SCALED
 strhelp  = STR_CONFIG_SETTING_LINKGRAPH_NOT_DAYLENGTH_SCALED_HELPTEXT
-extver   = SlXvFeatureTest([](uint16 version, bool version_in_range, uint16 feature_versions[XSLFI_SIZE]) -> bool { return version_in_range && SlXvIsFeaturePresent(feature_versions, XSLFI_LINKGRAPH_DAY_SCALE) && !SlXvIsFeaturePresent(feature_versions, XSLFI_JOKERPP); })
+extver   = SlXvFeatureTest([](uint16 version, bool version_in_range, const std::array<uint16, XSLFI_SIZE> &feature_versions) -> bool { return version_in_range && SlXvIsFeaturePresent(feature_versions, XSLFI_LINKGRAPH_DAY_SCALE) && !SlXvIsFeaturePresent(feature_versions, XSLFI_JOKERPP); })
 patxname = ""linkgraph_day_scale.linkgraph.recalc_not_scaled_by_daylength""
 
 [SDT_ENUM]
