--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -500,7 +500,7 @@ jobs:
         HOMEBREW_NO_AUTO_UPDATE: 1
         HOMEBREW_NO_INSTALL_CLEANUP: 1
       run: |
-        brew install pandoc
+        brew install pandoc pkg-config
 
     - name: Prepare cache key
       id: key
