--- a/src/3rdparty/CMakeLists.txt
+++ b/src/3rdparty/CMakeLists.txt
@@ -6,3 +6,5 @@ add_subdirectory(cpp-btree)
 add_subdirectory(mingw-std-threads)
 add_subdirectory(monocypher)
 add_subdirectory(randombytes)
+add_subdirectory(optional)
+add_subdirectory(robin_hood)
