Add "very reduced" mode to the vehicle breakdowns setting

--- a/src/table/settings/settings.ini
+++ b/src/table/settings/settings.ini
@@ -164,6 +164,14 @@ static const SettingDescEnumEntry _viewport_map_modes[] = {
 { 0, STR_NULL }
 };
 
+static const SettingDescEnumEntry _vehicle_breakdown_modes[] = {
+{ 0,               STR_DISASTER_NONE },
+{ 64,              STR_VERY_REDUCED },
+{ 1,               STR_DISASTER_REDUCED },
+{ 2,               STR_DISASTER_NORMAL },
+{ 0, STR_NULL }
+};
+
 /* Some settings do not need to be synchronised when playing in multiplayer.
  * These include for example the GUI settings and will not be saved with the
  * savegame.
@@ -365,18 +373,14 @@ def      = 0
 min      = 0
 max      = 2
 
-[SDT_VAR]
+[SDT_ENUM]
 var      = difficulty.vehicle_breakdowns
 type     = SLE_UINT8
 from     = SLV_97
-flags    = SF_GUI_DROPDOWN
 def      = 1
-min      = 0
-max      = 2
-interval = 1
+enumlist = _vehicle_breakdown_modes
 str      = STR_CONFIG_SETTING_VEHICLE_BREAKDOWNS
 strhelp  = STR_CONFIG_SETTING_VEHICLE_BREAKDOWNS_HELPTEXT
-strval   = STR_DISASTER_NONE
 cat      = SC_BASIC
 
 [SDT_VAR]
