Add setting for rail depot maximum speed

--- a/src/table/settings/settings.ini
+++ b/src/table/settings/settings.ini
@@ -1465,9 +1465,23 @@ max      = 500
 interval = 5
 str      = STR_CONFIG_SETTING_THROUGH_LOAD_SPEED_LIMIT
 strhelp  = STR_CONFIG_SETTING_THROUGH_LOAD_SPEED_LIMIT_HELPTEXT
-strval   = STR_CONFIG_SETTING_THROUGH_LOAD_SPEED_LIMIT_VAL
+strval   = STR_JUST_VELOCITY
 cat      = SC_EXPERT
 patxname = ""vehicle.through_load_speed_limit""
+
+[SDT_VAR]
+var      = vehicle.rail_depot_speed_limit
+type     = SLE_UINT16
+flags    = SF_GUI_VELOCITY
+def      = 61
+min      = 5
+max      = 100
+interval = 5
+str      = STR_CONFIG_SETTING_RAIL_DEPOT_SPEED_LIMIT
+strhelp  = STR_CONFIG_SETTING_RAIL_DEPOT_SPEED_LIMIT_HELPTEXT
+strval   = STR_JUST_VELOCITY
+cat      = SC_EXPERT
+patxname = ""vehicle.rail_depot_speed_limit""
 
 [SDT_BOOL]
 var      = pf.forbid_90_deg
