Add company setting for remain at station if next order for same station
Set value on load for whether the save version had this enabled for trains

--- a/src/table/settings/company_settings.ini
+++ b/src/table/settings/company_settings.ini
@@ -253,6 +253,15 @@ str      = STR_CONFIG_SETTING_COPY_CLONE_ADD_TO_GROUP
 strhelp  = STR_CONFIG_SETTING_COPY_CLONE_ADD_TO_GROUP_HELPTEXT
 patxname = ""copy_clone_add_to_group""
 
+[SDT_BOOL]
+base     = CompanySettings
+var      = remain_if_next_order_same_station
+flags    = SF_PER_COMPANY
+def      = true
+str      = STR_CONFIG_SETTING_REMAIN_IF_NEXT_ORDER_SAME_STATION
+strhelp  = STR_CONFIG_SETTING_REMAIN_IF_NEXT_ORDER_SAME_STATION_HELPTEXT
+patxname = ""remain_if_next_order_same_station""
+
 [SDT_VAR]
 base     = CompanySettings
 var      = old_simulated_wormhole_signals
