Fix save/load and GUI for locale.units_velocity_nautical setting

--- a/src/table/settings/settings.ini
+++ b/src/table/settings/settings.ini
@@ -4203,7 +4203,7 @@ strval   = STR_CONFIG_SETTING_LOCALISATION_UNITS_VELOCITY_IMPERIAL
 var      = locale.units_velocity_nautical
 type     = SLE_UINT8
 from     = SLV_VELOCITY_NAUTICAL
-flags    = SF_NO_NETWORK_SYNC | SF_GUI_DROPDOWN
+flags    = SF_NO_NETWORK_SYNC | SF_GUI_DROPDOWN | SF_ENABLE_UPSTREAM_LOAD
 def      = 1
 max      = 4
 full     = _locale_units
@@ -4212,6 +4212,8 @@ cat      = SC_BASIC
 str      = STR_CONFIG_SETTING_LOCALISATION_UNITS_VELOCITY_NAUTICAL
 strhelp  = STR_CONFIG_SETTING_LOCALISATION_UNITS_VELOCITY_HELPTEXT
 strval   = STR_CONFIG_SETTING_LOCALISATION_UNITS_VELOCITY_IMPERIAL
+extver   = SlXvFeatureTest(XSLFTO_OR, XSLFI_VELOCITY_NAUTICAL)
+patxname = ""locale.units_velocity_nautical""
 
 [SDT_OMANY]
 var      = locale.units_power
